@@ -1,3 +1,6 @@
+2022-01-05
+- Fix commit to admin level commit
+
 2021-09-03
 - Fix issue with script exiting cleanly
 
